[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
misc = { path = "../common/misc" }

libc = {workspace=true}
ctrlc = {workspace=true}
once_cell = {workspace=true}
tokio = {workspace=true,features=["full"]}
paho-mqtt = {version="0.11.1",default-features=false,features=["bundled"]}
futures-util = "0.3.25"
axum = "0.6.0"
async-trait =  {workspace=true}



